--- a/orginal/apple.html
+++ b/orginal/apple.html
@@ -83,7 +83,7 @@
 
         <nav class="row ps-3 " >
           <div class="col">   
-            <img src="images/new logo.png" alt="this is a logo" class="mt-1" style="width: 50px;
+            <img src="/images/new logo.png" alt="this is a logo" class="mt-1" style="width: 50px;
             padding-top: 6px;
             " >
           </div>
@@ -114,9 +114,9 @@
     </div> -->
     <div class="container-fluid">
       <div class="row img p-0" style="height: 30%; padding-right: 0px; object-fit: cover;">
-          <img src="images/banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
+          <img src="/images/banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
           <div class="logo h-200">
-            <img src="images/new logo.png" class="image-fluid  image-1 position-absolute " alt="">
+            <img src="/images/new logo.png" class="image-fluid  image-1 position-absolute " alt="">
             
           </div>
           <p class=" position-relative top-100 mt-lg-5 mt-md-5"></p>
@@ -212,7 +212,7 @@ Modal -->
           <div class="col-sm-12 col-lg-6 p-2 ">
             <div class="card d-flex justify-content-center h-100 " style="" >
               <a href="apple juice.html" class="text-decoration-none justify-content-center  card-body">
-                <center><img src="images/apple juice1.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
+                <center><img src="/images/apple juice1.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
                 <h3 class="text-decoration-none text-black d-flex justify-content-center">APPLE JUICE</h3>
               
                 <center><button class="but btn btn-success mb-2" onclick="window.location.href='apple juice.html'">View Tutorial</button><br> 
@@ -225,8 +225,8 @@ Modal -->
           </div>
           <div class="col-sm-12 col-lg-6 p-2  ">
             <div class="card d-flex justify-content-center h-100 " style="" >
-              <a href="" class="text-decoration-none justify-content-center  card-body">
-                <center><img src="images/apple smoothie1.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
+              <a href="appleoats.html" class="text-decoration-none justify-content-center  card-body">
+                <center><img src="/images/apple smoothie1.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
                 <h3 class="text-decoration-none text-black d-flex justify-content-center">APPLE OATS SMOOTHIE</h3>
                 <center><button class="but btn btn-success mb-2" >View Tutorial</button><br> 
                   <button class="but1 btn btn-success">View Description</button>
@@ -238,8 +238,8 @@ Modal -->
         </div>
         <div class="col-sm-12 col-lg-6 p-2 ">
             <div class="card d-flex justify-content-center h-100 " style="" >
-              <a href="" class="text-decoration-none justify-content-center  card-body">
-                <center><img src="images/apple nuts smoothie.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
+              <a href="appleoats.html" class="text-decoration-none justify-content-center  card-body">
+                <center><img src="/images/apple nuts smoothie.jfif" class="justify-content-center image-fluid w-100 h-100 rounded" alt="Gabbage"></center>
                 <h3 class="text-decoration-none text-black d-flex justify-content-center">APPLE NUTS SMOOTHIE</h3>
                 <center><button class="but btn btn-success mb-2">View Tutorial</button><br> 
                   <button class="but1 btn btn-success ">View Description</button>
