--- a/applenuts.html
+++ b/applenuts.html
@@ -66,9 +66,9 @@
 
     <div class="container-fluid">
       <div class="row img p-0" style="height: 30%; padding-right: 0px; object-fit: cover;">
-          <img src="images/banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
+          <img src="/orginal/images/banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
           <div class="logo h-200">
-            <img src="images/new logo.png" class="image-fluid  image-1 position-absolute " alt="">
+            <img src="/orginal/images/new logo.png" class="image-fluid  image-1 position-absolute " alt="">
             
           </div>
           <p class=" position-relative top-100 mt-lg-5 mt-md-5"></p>
@@ -92,7 +92,7 @@
     <div class="container " style="">
         <div class="row">
             <div class="col-sm-12 col-lg-6 d-flex justify-content-center bg-black">
-                <video src="images/apple nuts smoothie.mp4.mp4" controls class="w-50 d-flex justify-content-center align-item-center "> This format not support the video</video>
+                <video src="/orginal/images/apple nuts smoothie.mp4.mp4" controls class="w-50 d-flex justify-content-center align-item-center "> This format not support the video</video>
             </div>
             
             <div class="col-sm-12 col-lg-6">
