--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             -->
 <div class="container-fluid">
   <div class="row img p-0" style="height: 30%; padding-right: 0px; object-fit: cover;">
-      <img src="images/banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
+      <img src="banner1.jpeg" class="image-fluid " style="height: 10%; overflow: hidden;" alt="THis image does not support your browser">
       <div class="logo h-200">
-        <img src="images/new logo.png" class="image-fluid  image-1 position-absolute " alt="">
+        <img src="new logo.png" class="image-fluid  image-1 position-absolute " alt="">
         
       </div>
       <p class=" position-relative top-100 mt-lg-5 mt-md-5"></p>
@@ -179,7 +179,7 @@
       <div class="col col-lg-6 p-2">
         <div class="card d-flex justify-content-center h-100">
           <a href="apple.html" class="text-decoration-none justify-content-center  card-body ">
-            <center><img src="images/straberry.png" class="justify-content-center image-fluid" alt="Straberry"></center>
+            <center><img src="straberry.png" class="justify-content-center image-fluid" alt="Straberry"></center>
             <h3 class="text-decoration-none text-black d-flex justify-content-center">Straberry</h3>
             <center><button class="but btn btn-success mb-2">View Recipe</button><br> 
               
